# RayTracingInOneWeekend

./: Cargo.toml  image.ppm  lcov.info
.cargo/: config.toml
RayTracingInOneWeekend profiling/: RayTracingInOneWeekend profiling.ncu-proj
RayTracingInOneWeekend profiling/profilings/: profile_1.ncu-rep  profile_2.ncu-rep  profile_3.ncu-rep  profile_4.ncu-rep  profile_5.ncu-rep  profile_6.ncu-rep  profile_7.ncu-rep  profile_8.ncu-rep
crates/grid_nd/: Cargo.toml
crates/grid_nd/kernels/: Cargo.toml
crates/grid_nd/kernels/src/: grid_nd.rs  lib.rs
crates/grid_nd/kernels/src/test/: mod.rs  test_kernels.rs
crates/grid_nd/src/: lib.rs
kernels/: Cargo.toml
kernels/src/: boundingbox.rs  color.rs  hitable.rs  hitable_list.rs  hitable_list_builder.rs  lib.rs  random.rs  ray.rs  sphere.rs  vec3.rs
kernels/src/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
kernels/src/textures/: checker.rs  mod.rs  solid.rs
src/: lib.rs
src/raytracer/: camera.rs  color.rs  hitable.rs  hitable_list.rs  interval.rs  mod.rs  options.rs  ray.rs  sphere.rs  vec3.rs
src/raytracer/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
