[package]
name = "simple-ray-tracer"
version = "0.1.0"
edition = "2024"
default-run = "render"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.7", features = ["derive", "env"] }
cuda_std = { path = "../Rust-CUDA/crates/cuda_std" }
cust = { path = "../Rust-CUDA/crates/cust" }
cust_raw = { path = "../Rust-CUDA/crates/cust_raw" }
derive_more = { version = "2.0.1", features = ["full"] }
enum_dispatch = "0.3.13"
indicatif = "0.18.0"
nanorand = "0.8.0"
rand = "0.9.2"
grid-nd = { path = "crates/grid_nd" }
image = "0.25.6"
simple-ray-tracer-kernels = { path = "kernels" }
gpu_rand = { path = "../Rust-CUDA/crates/gpu_rand" }

[build-dependencies]
cuda_builder = { path = "../Rust-CUDA/crates/cuda_builder" }

[workspace]
resolver = "2"
members = ["crates/*"]
