[package]
name = "grid-nd"
version = "0.1.0"
edition = "2018"

[dependencies]
grid-nd-kernels = { path = "kernels" }

[target.'cfg(not(target_os = "cuda"))'.dependencies]
cust = { path = "../../../Rust-CUDA/crates/cust" }

[build-dependencies]
cuda_builder = { path = "../../../Rust-CUDA/crates/cuda_builder" }
