[package]
name = "grid-nd-kernels"
version = "0.1.0"
edition = "2024"

[dependencies]
cuda_std = { path = "../../../../Rust-CUDA/crates/cuda_std" }

[target.'cfg(not(target_os = "cuda"))'.dependencies]
cust = { path = "../../../../Rust-CUDA/crates/cust" }
rand = "0.9.2"

[lib]
crate-type = ["cdylib", "rlib"]
